--- a/Pages/console.cshtml
+++ b/Pages/console.cshtml
@@ -1,8 +1,11 @@
 ﻿@page
-@model NetworkMonitoring.Pages.consoleModel
+@model ConsoleModel
 @{
-    ViewData["Title"] = "console";
+    ViewData["Title"] = "Console";
 }
-<h1>@ViewData["Title"]</h1>
+<body>
+    <h1>@ViewData["Title"]</h1>
 
-<p> the main page to manage all devices and graphs </p>
+    <p> the main page to manage all devices and graphs </p>
+
+</body>
