--- a/Pages/graphs.cshtml
+++ b/Pages/graphs.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model graphsModel
+@model GraphsModel
 @{
-    ViewData["Title"] = "graphs";
+    ViewData["Title"] = "Graphs";
 }
 <h1>@ViewData["Title"]</h1>
 
