--- a/Pages/console.cshtml
+++ b/Pages/console.cshtml
@@ -3,9 +3,45 @@
 @{
     ViewData["Title"] = "Console";
 }
+
 <body>
-    <h1>@ViewData["Title"]</h1>
+    <div class="row">
+        <div class="column title">
+            <h5>@ViewData["Title"]</h5>
+        </div>
+        <div class="column infoBar">
+            Logged in as 
+            <span class="user usermenuup" id="user">admin</span>
+        </div>
+    </div>
 
-    <p> the main page to manage all devices and graphs </p>
-
+    <div class="wrapper">
+        <div class="sidebar">
+            <ul>
+                <li><i class="tm-nav-item"></i>Main Console</li>
+                <li><i class="tm-nav-item"></i>Create</li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>New Device</a></li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>New Graphs</a></li>
+                <li><i class="tm-nav-item"></i>Management</li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Devices</a></li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Graphs</a></li>
+                <li><i class="tm-nav-item"></i>Templates</li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Devices</a></li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Graphs</a></li>
+                <li><i class="tm-nav-item"></i>Configuration</li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Settings</a></li>
+                <li><a href="#"><i class="tm-nav-item-low"></i>Users</a></li>
+                
+            </ul> 
+        </div>
+    
+        <div class="main_content">
+            <div class="header">Welcome!! Have a nice day.</div>  
+            <div class="info">
+              <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A sed nobis ut exercitationem atque accusamus sit natus officiis totam blanditiis at eum nemo, nulla et quae eius culpa eveniet voluptatibus repellat illum tenetur, facilis porro. Quae fuga odio perferendis itaque alias sint, beatae non maiores magnam ad, veniam tenetur atque ea exercitationem earum eveniet totam ipsam magni tempora aliquid ullam possimus? Tempora nobis facere porro, praesentium magnam provident accusamus temporibus! Repellendus harum veritatis itaque molestias repudiandae ea corporis maiores non obcaecati libero, unde ipsum consequuntur aut consectetur culpa magni omnis vero odio suscipit vitae dolor quod dignissimos perferendis eos? Consequuntur!</div>
+              <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A sed nobis ut exercitationem atque accusamus sit natus officiis totam blanditiis at eum nemo, nulla et quae eius culpa eveniet voluptatibus repellat illum tenetur, facilis porro. Quae fuga odio perferendis itaque alias sint, beatae non maiores magnam ad, veniam tenetur atque ea exercitationem earum eveniet totam ipsam magni tempora aliquid ullam possimus? Tempora nobis facere porro, praesentium magnam provident accusamus temporibus! Repellendus harum veritatis itaque molestias repudiandae ea corporis maiores non obcaecati libero, unde ipsum consequuntur aut consectetur culpa magni omnis vero odio suscipit vitae dolor quod dignissimos perferendis eos? Consequuntur!</div>
+              <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A sed nobis ut exercitationem atque accusamus sit natus officiis totam blanditiis at eum nemo, nulla et quae eius culpa eveniet voluptatibus repellat illum tenetur, facilis porro. Quae fuga odio perferendis itaque alias sint, beatae non maiores magnam ad, veniam tenetur atque ea exercitationem earum eveniet totam ipsam magni tempora aliquid ullam possimus? Tempora nobis facere porro, praesentium magnam provident accusamus temporibus! Repellendus harum veritatis itaque molestias repudiandae ea corporis maiores non obcaecati libero, unde ipsum consequuntur aut consectetur culpa magni omnis vero odio suscipit vitae dolor quod dignissimos perferendis eos? Consequuntur!</div>
+            </div>
+        </div>
+    </div>
 </body>
