--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -3,6 +3,21 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<body>
+    <div class="row">
+        <div class="column title">
+            <h5>@ViewData["Title"]</h5>
+        </div>
+        <div class="column infoBar">
+            Logged in as
+            <span class="user usermenuup" id="user">admin</span>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <h1 class="display-4">@ViewData["Title"]</h1>
+        <p>This page is used to detail your site's privacy policy.</p>
+    </div>
+</body>
+
