--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -53,13 +53,13 @@
 </body>
 </html>
 
-<!--<footer class="border-top footer text-muted">
+@*<footer class="border-top footer text-muted">
     <div class="container">
-        <p>code and design by Thanh Tung</p>-->
-        @*<p id="date"></p>
+        <p>code and design by Thanh Tung</p>
+        <p id="date"></p>
         <script>
             const d = new Date();
             document.getElementById("date").innerHTML = d;
-        </script>*@
-    <!--</div>
-</footer>-->
+        </script>
+    </div>
+</footer>*@
