--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
 }
 
 .footer {
-  position: static;
+  position: ;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
@@ -105,20 +105,13 @@ body {
     clear: both;
 }
 
-.title {
-
-}
-
-.infoBar {
-
-}
-
-ul li {
-    list-style-type:none;
-}
-
 .tm-nav {
     margin-left: -40px;
+}
+
+.nav-item a {
+    width: auto;
+    float: inherit;
 }
 
 /*content area*/
@@ -143,85 +136,60 @@ body {
 .wrapper .sidebar {
     width: 200px;
     height: 100%;
-    /*background-color: darkgreen;*/
-    padding: 30px 0px;
     position: absolute;
+    float: left;
+    background-color: inherit;
 }
 
-.wrapper .sidebar h2 {
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.wrapper .sidebar ul li {
-    padding: 15px;
+.wrapper .sidebar button {
     border-bottom: 1px solid #bdb8d7;
     border-bottom: 1px solid rgba(0,0,0,0.05);
     border-top: 1px solid rgba(255,255,255,0.05);
-}
-
-.wrapper .sidebar ul li a {
-    color: #bdb8d7;
+    background-color: inherit;
     display: block;
+    padding: 22px 16px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    width: 100%;
+    text-align: left;
+    height: 50px;
 }
 
-.wrapper .sidebar ul li a .fas {
-    width: 25px;
+.wrapper .sidebar button:hover {
+    background-color: deepskyblue;
+    color: white;
+    margin: auto;
+    text-align: center;
+    animation: alternate;
 }
 
-.wrapper .sidebar ul li:hover {
-    background-color: #594f8d;
-}
-
-.wrapper .sidebar ul li:hover a {
+.wrapper .sidebar button:hover a {
     color: #fff;
 }
 
-.wrapper .sidebar .social_media {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-}
-
-.wrapper .sidebar .social_media a {
-    display: block;
-    width: 40px;
-    background: #594f8d;
-    height: 40px;
-    line-height: 45px;
-    text-align: center;
-    margin: 0 5px;
-    color: #bdb8d7;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-
-.wrapper .main_content {
+.wrapper .maincontent {
     width: 100%;
     margin-left: 200px;
 }
 
-.wrapper .main_content .header {
+.wrapper .maincontent .header {
     padding: 20px;
     background: #fff;
     color: #717171;
     border-bottom: 1px solid #e0e4e8;
 }
 
-.wrapper .main_content .info {
+.wrapper .maincontent .info {
     margin: 20px;
     color: #717171;
     line-height: 25px;
 }
 
-.wrapper .main_content .info div {
+.wrapper .maincontent .info div {
     margin-bottom: 20px;
 }
 
 .tm-nav-item-low {
-    color: lightblue;
+    color: lightslategrey;
 }
